--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, 'Help' %>
 <h1>Help</h1>
 <p>
   Get help on the Ruby on Rails tutorial at the <a href="http://railstutorial.org/help">Rails Tutorial Help Page</a>.
